[gd_scene load_steps=14 format=3 uid="uid://dgh2sns3omtq1"]

[ext_resource type="Script" path="res://objects/level_manager/level_manager.gd" id="1_u6fp7"]
[ext_resource type="PackedScene" uid="uid://cbdypjcbubyqr" path="res://objects/levels/levels/pillars.tscn" id="2_rxlc8"]
[ext_resource type="PackedScene" uid="uid://cemya5dt6rv8o" path="res://objects/levels/levels/walls.tscn" id="3_qofu2"]
[ext_resource type="Texture2D" uid="uid://c7abfnqb6q1w" path="res://assets/level/level-background.png" id="3_rhgfj"]
[ext_resource type="PackedScene" uid="uid://j6yyqdar5jqj" path="res://objects/player/player.tscn" id="4_2vdmu"]
[ext_resource type="PackedScene" uid="uid://cgr0ql6f427ho" path="res://objects/levels/levels/maze.tscn" id="4_vqkta"]
[ext_resource type="PackedScene" uid="uid://bi8f7avefl6k2" path="res://objects/levels/levels/arc.tscn" id="5_ahwep"]
[ext_resource type="PackedScene" uid="uid://hgjixfnfogg8" path="res://objects/levels/levels/crack.tscn" id="6_4mk4q"]
[ext_resource type="PackedScene" uid="uid://c3rj4fp7bwx1d" path="res://objects/levels/levels/wave.tscn" id="7_allnc"]
[ext_resource type="PackedScene" uid="uid://crfu8grsg3vsm" path="res://objects/levels/levels/dots.tscn" id="8_r40qx"]
[ext_resource type="PackedScene" uid="uid://v3sbgs7moh0h" path="res://objects/levels/levels/shield.tscn" id="9_uru4g"]
[ext_resource type="PackedScene" uid="uid://bocb6wyp5k3wt" path="res://userinterfaces/minimap/minimap.tscn" id="10_e15xb"]

[sub_resource type="LabelSettings" id="LabelSettings_cmrp1"]
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="LevelManager" type="Node2D"]
script = ExtResource("1_u6fp7")
_level_scenes = Array[PackedScene]([ExtResource("2_rxlc8"), ExtResource("3_qofu2"), ExtResource("4_vqkta"), ExtResource("5_ahwep"), ExtResource("6_4mk4q"), ExtResource("7_allnc"), ExtResource("8_r40qx"), ExtResource("9_uru4g")])

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 480.0
offset_bottom = 360.0
texture = ExtResource("3_rhgfj")

[node name="Level" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("4_2vdmu")]
position = Vector2(240, 0)

[node name="FrontLayer" type="CanvasLayer" parent="."]

[node name="DebugInfo" type="VBoxContainer" parent="FrontLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="FrontLayer/DebugInfo"]
layout_mode = 2
text = "Level: ExampleLevel"
label_settings = SubResource("LabelSettings_cmrp1")

[node name="PositionLabel" type="Label" parent="FrontLayer/DebugInfo"]
layout_mode = 2
text = "Position: (0, 0)"
label_settings = SubResource("LabelSettings_cmrp1")

[node name="ColorRect" type="ColorRect" parent="FrontLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 80.0
grow_horizontal = 0
color = Color(0, 0, 0, 1)

[node name="Minimap" parent="FrontLayer/ColorRect" instance=ExtResource("10_e15xb")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
